# virtual-lab

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml
base/: urls.py  views.py
client/: file#1.txt  main.py
frontend/: code.js  index.html  script.js  style.css
rero_pes/: asgi.py  settings.py  urls.py  wsgi.py
robot/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
robot/migrations/: 0001_initial.py  0002_alter_sketchbinary_last_run_datetime.py  0003_sketchbinary_author.py  0004_alter_sketchbinary_title.py
src/: protocols.js  server.js
static/css/: input.css  output.css
tailwind/: package.json  tailwind.config.js
templates/: _footer.html  _navbar.html  base.html
templates/base/: home.html
templates/robot/: add_sketch.html  dashboard.html  remote_lab.html
test/: index.html  script.js  style.css
