[tool.poetry]
name = "ieee ras remote robotics site"
version = "0.1.0"
description = "Website to handling interaction with IEEE RAS Remote Robotics Lab of PES University."
authors = ["Rohanjnr <rohanjnr44@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-storages = "^1.13.2"
uvicorn = "^0.21.1"
channels = "^4.0.0"
boto3 = "^1.26.97"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
daphne = "^4.0.0"
channels-redis = "^4.0.0"
websockets = "^10.4"
websocket-client = "^1.5.1"
rel = "^0.4.8"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
